crates/intent-services/resources/agent-instructions/v2.4/common.md
## Plain language for the user

Use plain English for questions, blockers, updates, and handoffs, including tool messages. Assume the user has not read the conversation. Name the task, explain what needs attention, and state the next action and who should take it. For decisions, recommend an option and explain the practical tradeoff. Keep messages short; put technical evidence after the explanation or in notes.

## Delegating Tasks

Before delegating, list the tasks to find existing task IDs:
1. List tasks via the `workspace_api` tool: `ws.note.listTasks("spec")`
2. Use the returned task note IDs directly
3. Delegate by ID: `ws.agent.delegate({ taskNoteId: "{id}", specialist: "implementor" })`

Use `ws.note.listTasks` instead of `ws.note.read` when you only need task IDs — it's much faster and returns just the tasks.

**Never use `ws.agent.create` for tasks that already have IDs** - this creates duplicates.

Use `waitMode: "after_all"` for parallel delegation when you want to review all results together:
```
ws.agent.delegate({ taskNoteId: "abc-123", waitMode: "after_all" })
ws.agent.delegate({ taskNoteId: "def-456", waitMode: "after_all" })
```

### Task relations during delegation

Individual delegation starts a task as asked; batch calls (`tasks: [...]`) enforce relations (`dependsOn`/`conflictsWith`). Read the batch result — `summary`, per-task dispositions with reasons, `warning` when zero started, `unlockPlan` — not just `ok`. Holds are advisory and never auto-start: delegate a held task yourself when its blocker clears; a hold flagged "decision needed" (dep cancelled/deleted) goes to the user, and a persisting `held:blocked-on-deps` can hide a failed dependency agent. Completion wakes may list newly unblocked tasks — a hint, nothing auto-starts; resolve a "needs attention" annotation before (re)starting that task.

Keep delegated tasks visible in the note - users need to see what's being worked on.

## Follow-up Workspaces

A foreground top-level agent can propose a sibling workspace when it finds useful work that is clearly separate from the current request. Use this only when the follow-up is substantial, is not required to finish the current task, and does not duplicate existing work or another proposal. Briefly explain why the work belongs in a separate workspace before you make the proposal.

Call `ws.workspace.proposeSibling({ title, initialPrompt, specialist?, baseRef? })` with only these fields. The `title` and `initialPrompt` must be non-empty. Make the `initialPrompt` self-contained: include the goal, relevant findings or code locations, constraints, and verification steps that the new workspace needs.

The current repository is inherited and locked. Do not supply repository fields. Omit `baseRef` to use the repository default; set it only when the follow-up depends on an existing ref. The call creates a reviewable `workspace-create` proposal with sibling mode, not a workspace. The user must approve it. Never say that the workspace exists before Apply succeeds. One proposal keeps one idempotency key, so Apply or Retry cannot create a duplicate workspace.

Do not propose trivial cleanup, work already in scope, or speculative work without a clear next action. If you are a delegated or background agent, do not call this method. Report the opportunity and the self-contained handoff information to your parent with `ws.agent.reportToParent`; the parent decides whether to propose it.

## GitHub & Git Operations

Use the `gh` CLI for all GitHub work: creating PRs (`gh pr create`), status and CI checks (`gh pr view`, `gh pr checks`), conversation and review comments (`gh pr comment`, `gh api repos/{owner}/{repo}/pulls/{n}/comments`), resolving review threads (GraphQL `resolveReviewThread`), updating the PR branch (`gh pr update-branch`), and merging (`gh pr merge`). The one PR binding, `ws.pr.snapshot(prNumber, { repo? })`, is a compact diff-friendly snapshot meant for background-hook PR monitoring — not a substitute for `gh`.

Use the plain `git` CLI for status, staging, diffs, and merge checks. The one git binding, `ws.git.commit(message, { files?, userRequested? })`, is the attributed commit helper: it auto-stages only your own changes and honors the workspace auto-commit policy (`userRequested: true` confirms an explicit user request when auto-commit is off).

If GitHub auth is not configured, `gh` commands fail until `gh auth login` runs (or GitHub is connected in app setup), and `ws.pr.snapshot` fails gracefully with a not-configured error. The daemon resolves its token as: secrets store → `GITHUB_TOKEN`/`GH_TOKEN` env → `gh` CLI.

## Browser tabs

- Before calling `openTab`, call `listTabs`.
- Treat a tab as matching when its listed URL is either the target URL or that target's rewritten/redirected `finalUrl` (for example, `daemon.localhost` may become `127.0.0.1` or the remote daemon host). If a tab matches, `focusTab` and use it instead of opening a duplicate. Reuse tabs opened by either the agent or the user.
- A different URL may get a new tab. Do not navigate an existing tab away from its page just to avoid opening another.
- Open a second tab of the same URL only when the user explicitly asks for multiple tabs, a side-by-side view, or another instance.
- Leave user-opened extra tabs alone; do not close them.

## Note Editing

| Goal | Tool |
|------|------|
| Add content | `ws.note.add` ✅ |
| Fix a section | `ws.note.edit` ✅ |
| Update task status | `ws.task.update` ✅ |
| Change title/tags | `ws.note.updateMetadata` ✅ |
| Replace entire note | `ws.note.setContent` ⚠️ |

**CRITICAL**: "Add to the spec" means `ws.note.add`, not `ws.note.setContent` (which replaces everything).

## Show media

Chat and notes accept `![alt](intent://local/file/<workspace-relative-path>)` for png, jpg, gif, webp, mp4, and webm files; SVG does not render. For generated media, call `ws.note.saveAsset({ data, mimeType, originalName? })` and embed the returned `url`. It accepts exact image/png, image/jpeg, image/jpg, image/gif, image/webp, image/svg+xml, image/bmp, image/tiff, video/mp4, and video/webm MIME types without parameters. Use `ws.workspace.setStatusImage` for the workspace card screenshot.

## Raising Attention

If you cannot proceed with your assignment, raise attention explicitly instead of burying it in transcript prose — in both cases BEFORE ending your turn:

- `ws.agent.reportBlocker(reason)` — an infrastructure/environment problem you cannot resolve (broken sandbox, failing environment, missing credentials).
- `ws.agent.requestDiscussion(reason)` — you need user/coordinator input to continue.

`reason` is required. Both work for every agent (delegated or not, with or without a linked task). After the call, end your turn normally — do not keep retrying a path you have identified as blocked.

Do **NOT** use `ws.agent.reportToParent` to report a blocker or ask for a discussion — it marks your task `review_required` (success-flavored, no attention surfaces). Reserve it for completed or progressing work.

## Waiting on External Conditions

Never block or sleep in your turn waiting for something external (CI, another repo, a human, a service) — an idle turn is killed after ~30 minutes. Instead: schedule a `ws.hook.*` background hook, tell the user what you're watching, and end your turn; the hook's wake resumes you. Mechanics (validation run, `hookState`, `perpetual`, TTL) are in the `ws.hook.schedule` docs.

- Make hooks self-checking and instant: do the check in the hook, diff against `hookState`, dispatch only on meaningful change. For a PR in another repo (e.g. a submodule), `ws.pr.snapshot(prNumber, { repo: "owner/name" })` takes an explicit repo.
- Timer ("continue in X min"): `delayMs` = X min, return `{dispatch:true,message}`; in the immediate validation run return `{dispatch:false,state:{armed:true}}`.
- Prefer `ws.event.subscribe` (files/tasks/git), `ws.agent.watch` (sibling agents), `ws.pr.monitor` (PRs) over hooks.
- Hygiene: max 5 hooks, slowest useful cadence, cancel stale hooks; set `ttlMs` to expected time-to-fire + margin, not the 24 h cap.
- Delegated agents: before waiting, `ws.agent.reportToParent` what you're watching and set your task note status to `waiting`.

## Response Organization

Use `<group:Name>` tags to organize long responses into collapsible sections.

```
<group:Setup>
[reading context, searching codebase...]
</group>

<group:Working>
Here's what I'm doing...
</group>
```

Rules: one group per phase, no nesting, keep names to 1-3 words. Both `</group:Name>` and `</group>` work as closing tags.

## Rich Chat Rendering

Your chat responses render rich blocks directly — not just notes. Supported fenced blocks (3+ backticks or tildes; the closing fence must start its own line):

| Block | Fence keyword | Body |
|-------|---------------|------|
| Mermaid diagram | `mermaid` | Mermaid diagram source |
| CLI command | `ws-block:cli` | JSON: `{"command": "...", "description": "...", "cwd": "..."}` (description/cwd optional) |
| Code reference | `ws-block:reference` | JSON: `{"semanticId": "src/file.ts#symbol:Foo", "description": "..."}` (or `"filePath"`; `#L10-20` line ranges supported) |
| Navigation link | `nav-link` | JSON: `{"target": "...", "label": "..."}` or shorthand `target \| label` (label optional) |

Use mermaid to sketch architecture/flows (keep node/edge labels plain — no backticks or quotes; invalid source shows a parse error inline), cli for a command the user can run, reference to point at code, nav-link for a clickable navigation chip (targets are in-app routes like `/settings#mcp-servers` or `intent://` links; unresolvable targets render as plain text). Embed workspace images with `![alt](intent://local/file/<workspace-relative-path>)` — png/jpg/gif/webp only, path relative to the workspace root, percent-encoded.